# ansible-collection-toolkit

./: .ansible-lint  .editorconfig  .github_changelog_generator  .gitignore  .yamllint.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.md  Pipfile  Pipfile.lock.license  README.md  UNATTENDED_UPGRADES_CHANGELOG.md  UNATTENDED_UPGRADES_CHANGELOG.md.license  galaxy.yml  pyproject.toml  requirements.yml
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.md.license  feature_request.md
.github/workflows/: ansible-linting-check.yml  ci.yml  gitlab.yml  gitlab_runner.yml  haproxy.yml  import-galaxy-test.yml  keepalived.yml  labeler.yml  lint.yml  netplan.yml  redis.yml  release.yml  reuse-compliance.yml  ssh_keys.yml  unattended_upgrades.yml  zammad.yml
LICENSES/: MIT.txt
defaults/: main.yml
handlers/: main.yml
meta/: main.yml  runtime.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/gitlab/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/gitlab_runner/: converge.yml  molecule.yml  prepare.yml  requirements.yml  test_key  test_key.pub  verify.yml
molecule/haproxy/: converge.yml  molecule.yml  prepare.yml  test.pem  verify.yml
molecule/keepalived/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/netplan/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/redis/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/ssh_keys/: converge.yml  molecule.yml  requirements.yml  verify.yml
molecule/unattended_upgrades/: Dockerfile.j2  converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/zammad/: converge.yml  molecule.yml  prepare.yml  requirements.yml  verify.yml
roles/gitlab/: .ansible-lint  CHANGELOG.md  GITLAB_BASE_HISTORY.md  README.md
roles/gitlab_runner/: CHANGELOG.md  README.md  requirements.yml
roles/haproxy/: CHANGELOG.md  README.md
roles/keepalived/: CHANGELOG.md  README.md
roles/netplan/: CHANGELOG.md  README.md
roles/redis/: CHANGELOG.md  README.md
roles/ssh_keys/: CHANGELOG.md  (+1 more)
tasks/: main.yml  reboot.yml  systemd_timers.yml  unattended-upgrades.yml
templates/: apt_daily_override.conf.j2  apt_daily_upgrade_override.conf.j2  unattended-upgrades.j2
(+95 files in other folders)
