# SPDX-FileCopyrightText: Helmholtz Centre for Environmental Research (UFZ)
# SPDX-FileCopyrightText: Helmholtz-Zentrum Dresden-Rossendorf (HZDR)
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "ansible-collection-toolkit"
version = "6.1.1"
description = "This collection provides production-ready Ansible roles used for providing services used in research and by research software engineers, but not exclusively."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible>=11.3.0",
]

[dependency-groups]
dev = [
    "ansible-lint>=25.1.3",
    "molecule>=25.3.1",
    "molecule-plugins[podman]>=23.7.0",
    "netaddr>=1.3.0",
    "reuse>=5.0.2",
    "yamllint>=1.35.1",
]
