# SPDX-FileCopyrightText: Helmholtz Centre for Environmental Research (UFZ)
# SPDX-FileCopyrightText: Helmholtz-Zentrum Dresden-Rossendorf (HZDR)
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "ansible-collection-toolkit"
version = "6.2.1"
description = "This collection provides production-ready Ansible roles used for providing services used in research and by research software engineers, but not exclusively."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ansible>=11.9.0",
]

[dependency-groups]
dev = [
    "ansible-lint>=25.8.1",
    "molecule>=25.7.0",
    "molecule-plugins[podman]>=25.8.12",
    "netaddr>=1.3.0",
    "reuse>=5.0.2",
    "yamllint>=1.37.1",
]
